--- a/docs/howto/ht004.ipynb
+++ b/docs/howto/ht004.ipynb
@@ -2,220 +2,305 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "81769017-a1f8-4b47-9cf8-5df2a5fa25a4",
+   "id": "5479dfdd-1e32-4d5f-b8d4-53420048d810",
    "metadata": {},
    "source": [
-    "# ... add an affix-function to a standard name table during runtime?\n",
-    "If you are using the [standard name convention](../userguide/convention/index.rst), you are familiar with transformation functions like \"derivative_of_\\<SN1\\>_wrt_\\<SN2\\>\" or \"square_of_\\<SN\\>\".\n",
+    "# ... load a convention from a local YAML file?\n",
     "\n",
-    "Now, you want to add your custom transformation function without changing the package code. Say, you want to add the transformation \"maximum_of_<StdName>\", referring to the maximum value of your data.\n",
-    "\n",
-    "Here is the current state, which fails as expected:"
+    "Yes you can. To demonstrate this, let's take a convention file, which comes with the `h5RDMtoolbox`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "791af21d-0c99-4d0b-bb0b-b5f59ecb1c8c",
+   "id": "12f7590c-36f0-4778-90fa-aa4abb3cfe00",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"maximum_of_pressure\" not found in Standard Name Table \"Test\".\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
-    "from h5rdmtoolbox.convention.standard_names.transformation import Transformation\n",
-    "from h5rdmtoolbox.convention.standard_names import StandardName\n",
-    "\n",
-    "snt = h5tbx.convention.standard_names.StandardNameTable.from_zenodo(doi_or_recid=10428795)\n",
-    "\n",
-    "# check if the problem really exists:\n",
-    "try:\n",
-    "    snt['maximum_of_pressure']\n",
-    "except h5tbx.errors.StandardNameError as e:\n",
-    "    print(e)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "04b2c358-783c-4e6b-8d56-a1ffee7fdf70",
-   "metadata": {},
-   "source": [
-    "## Implementing a new transformation function\n",
-    "\n",
-    "We need to do two things:\n",
-    " 1. write a `function` which takes a regex result and generates the new standard name\n",
-    " 2. init a `Transformation` object which performs the regex match\n",
-    "\n",
-    "The respective regex pattern to the above is `^maximum_of_(.*)$`.\n",
-    "\n",
-    "The respective function is implemented in the following. It takes the result from a `re.match()` call and the standard name table object. The function then constructs a new standard name and returns it. Even if the regex match succeeded, it is still possible, that the function raises an error because the base standard_name may not exist."
+    "from h5rdmtoolbox import tutorial"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dc0db89c-c3b9-4c41-87dc-6a5ae91fc356",
+   "id": "d63db892-87e4-4f24-bfc8-7732cf3ff08b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "using(\"h5rdmtoolbox-tutorial-convention\")"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def maximum_of(match, snt):\n",
-    "    # match is the result of `re.match(`^maximum_of_(.*)$, <user_input_value>)`\n",
-    "    groups = match.groups()\n",
-    "    assert len(groups) == 1\n",
-    "    sn = snt[groups[0]]\n",
-    "    new_description = f\"Maximum of {sn.name}. {sn.description}\"\n",
-    "    return StandardName(match.string, sn.units, new_description)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b634d764-aeb9-4dde-bb00-7cf59941c15f",
-   "metadata": {},
-   "source": [
-    "The actual transformation is managed by the class `Transformation`. It takes the above defined function and the respective regex pattern:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "e10d2b65-b6ea-42ce-909d-a375a0ba71ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max_of = Transformation(r\"^maximum_of_(.*)$\", maximum_of)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "70de8f86-6a83-4b70-9fa6-b1f20fecaa98",
-   "metadata": {},
-   "source": [
-    "We can already check if the pattern matching works:"
+    "yaml_filename = tutorial.get_convention_yaml_filename()\n",
+    "\n",
+    "cv = h5tbx.convention.Convention.from_yaml(yaml_filename)\n",
+    "h5tbx.use(cv)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9f9d5fa2-9dfa-46ff-bc9b-8b9db8f5870a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "max_of.match('maximum_static_pressure') is None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "f54490f6-0272-4483-86f2-71fba12207c0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "max_of.match('maximum_of_static_pressure') is None"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "949bac12-f381-43a2-adfb-44848dafb559",
-   "metadata": {},
-   "source": [
-    "## Add it to an existing standard name table during runtime:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "a5ae8c3a-3115-400f-bd02-3d75578c707a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "snt.add_transformation(max_of)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "835d7ccb-afca-429a-a5f1-38b8a18e4230",
+   "id": "dfbb4a76-72cc-43d0-81a5-2416f7805bc0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
-       "    <li>\n",
-       "        <input id=\"group-maximum_of_static_pressure6876410300\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-maximum_of_static_pressure6876410300\">\n",
-       "        maximum_of_static_pressure</label>\n",
-       "        <ul class=\"h5tb-attr-list\">\n",
-       "           <li style=\"list-style-type: none; font-style: italic\">units : Pa</li>           <li style=\"list-style-type: none; font-style: italic\">description : Maximum of static_pressure. Static pressure refers to the force per unit area exerted by a fluid. Pressure is a scalar quantity.</li>      </il>\n",
-       "    </ul>\n",
-       "</ul>"
+       "<head><style>/*\r\n",
+       "CSS inspired by xarray: https://github.com/pydata/xarray\r\n",
+       "*/\r\n",
+       ".h5tb-header > div,\r\n",
+       ".h5tb-header > ul {\r\n",
+       "    display: inline;\r\n",
+       "    margin-top: 0;\r\n",
+       "    margin-bottom: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dataarray-cls,\r\n",
+       ".h5tb-dataarray-name {\r\n",
+       "    margin-left: 2px;\r\n",
+       "    margin-right: 10px;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dataarray-name {\r\n",
+       "    color: #000;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections {\r\n",
+       "    list-style: none;\r\n",
+       "    padding: 3px;\r\n",
+       "    margin: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input {\r\n",
+       "    display: none;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections label {\r\n",
+       "    display: inline;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input + label > span {\r\n",
+       "    display: inline;\r\n",
+       "    margin-left: 4px;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input:checked + label > span {\r\n",
+       "    display: none;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input:enabled + label {\r\n",
+       "    cursor: pointer;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input:not(.h5tb-values-in) ~ ul {\r\n",
+       "    display: none;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input:not(.h5tb-values-in):checked ~ ul {\r\n",
+       "    display: block;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input + label {\r\n",
+       "    width: 140px;\r\n",
+       "    color: #555;\r\n",
+       "    font-weight: 500;\r\n",
+       "    padding: 4px 0 2px 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input + label:before {\r\n",
+       "    display: inline-block;\r\n",
+       "    content: '+';\r\n",
+       "    font-size: 11px;\r\n",
+       "    width: 15px;\r\n",
+       "    text-align: center;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input:disabled + label:before {\r\n",
+       "    color: #777;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input:checked + label:before {\r\n",
+       "    content: '-';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list {\r\n",
+       "    display: inline-block !important;\r\n",
+       "    list-style: none;\r\n",
+       "    padding: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list li {\r\n",
+       "    display: inline-block;\r\n",
+       "    padding: 0;\r\n",
+       "    margin: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list:before {\r\n",
+       "    content: '(';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list:after {\r\n",
+       "    content: ')';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list li:not(:last-child):after {\r\n",
+       "    content: ',';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-has-index {\r\n",
+       "    text-decoration: underline;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list {\r\n",
+       "    list-style: none;\r\n",
+       "    padding: 0;\r\n",
+       "    margin: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list > li {\r\n",
+       "    background-color: #fcfcfc;\r\n",
+       "    overflow: hidden;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list > li:nth-child(odd) {\r\n",
+       "    background-color: #efefef;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list li:hover {\r\n",
+       "    background-color: rgba(3, 169, 244, .2);\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list li > span {\r\n",
+       "    display: inline-block;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in + label {\r\n",
+       "    width: 140px;\r\n",
+       "    padding-left: 0;\r\n",
+       "    font-weight: bold;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dataset {\r\n",
+       "    width: 100px;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-attributevalue {\r\n",
+       "    width: 100px;\r\n",
+       "    text-align: left;\r\n",
+       "    color: #888;\r\n",
+       "    white-space: nowrap;\r\n",
+       "    font-size: 12px;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in + label:before {\r\n",
+       "    content: ' ';\r\n",
+       "    display: inline-block;\r\n",
+       "    font-size: 11px;\r\n",
+       "    width: 15px;\r\n",
+       "    padding-left: 2px;\r\n",
+       "    padding-right: 2px;\r\n",
+       "    text-align: center;\r\n",
+       "    color: #aaa;\r\n",
+       "    text-decoration: none !important;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in:enabled + label:hover:before {\r\n",
+       "    color: #000;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in:checked + label:before {\r\n",
+       "    color: #ccc;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dims {\r\n",
+       "    width: 280px;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-attr-list {\r\n",
+       "    list-style: none;\r\n",
+       "    background-color: rgba(0,0,0,.0);\r\n",
+       "    padding-bottom: 6px;\r\n",
+       "    color: #6a6c73;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-attr-list li,\r\n",
+       ".h5tb-attr-list li:hover {\r\n",
+       "    background-color: rgba(0,0,0,.0);\r\n",
+       "}\r\n",
+       "\r\n",
+       "\r\n",
+       "/* Tooltip container */\r\n",
+       ".tooltip {\r\n",
+       "position: relative;\r\n",
+       "display: inline-block;\r\n",
+       "cursor: pointer;\r\n",
+       "}\r\n",
+       "\r\n",
+       "/* Tooltip text */\r\n",
+       ".tooltip .tooltiptext {\r\n",
+       "visibility: hidden;\r\n",
+       "width: 300px;\r\n",
+       "background-color: #555;\r\n",
+       "color: #fff;\r\n",
+       "text-align: center;\r\n",
+       "border-radius: 6px;\r\n",
+       "padding: 5px;\r\n",
+       "position: absolute;\r\n",
+       "z-index: 1;\r\n",
+       "bottom: 125%;\r\n",
+       "left: 50%;\r\n",
+       "margin-left: -60px;\r\n",
+       "opacity: 0;\r\n",
+       "transition: opacity 0.3s;\r\n",
+       "}\r\n",
+       "\r\n",
+       "/* Show the tooltip on hover */\r\n",
+       ".tooltip:hover .tooltiptext {\r\n",
+       "visibility: visible;\r\n",
+       "opacity:  1;\r\n",
+       "}</style></head>\n",
+       "<div class='h5tb-warp'>\n",
+       "\n",
+       "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
+       "                    <li>\n",
+       "                        <input id=\"group-ds--419631796511500\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--419631796511500\">\n",
+       "                        /<span>(0)</span></label>\n",
+       "                  \n",
+       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">contact: <a href=\"https://orcid.org/0000-0001-8729-0482\"><img alt=\"ORCID logo\" src=\"https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png\" width=\"16\" height=\"16\" />https://orcid.org/0000-0001-8729-0482</a></li><li style=\"list-style-type: none; font-style: italic\">data_type: experimental</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table: fan_standard_name_shorttable</li>\n",
+       "                    </ul>\n",
+       "</li>\n",
+       "</ul>\n",
+       "</div>"
       ],
       "text/plain": [
-       "<StandardName: \"maximum_of_static_pressure\" [Pa] Maximum of static_pressure. Static pressure refers to the force per unit area exerted by a fluid. Pressure is a scalar quantity.>"
+       "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "snt['maximum_of_static_pressure']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "ccc894ff-2748-4e1b-9677-5b37d0b7d792",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "snt.transformations[-1] == max_of"
+    "with h5tbx.File(data_type='experimental', contact=h5tbx.__author_orcid__) as h5:\n",
+    "    h5.dump()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18d18150-ab33-480f-9d9e-0c02a26e9aa9",
+   "id": "66ffcdbb-95e9-49ea-9642-6e0ee597e96a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -237,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
