further improve IRI-ID naming

--- a/docs/practical_examples/knowledge_graph.ipynb
+++ b/docs/practical_examples/knowledge_graph.ipynb
@@ -30,7 +30,8 @@
    "outputs": [],
    "source": [
     "import kglab\n",
-    "import rdflib"
+    "import rdflib\n",
+    "import numpy as np"
    ]
   },
   {
@@ -45,11 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "d4d871e0-5bff-42f7-a27d-f1f0337dd964",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -57,6 +56,8 @@
      "text": [
       "{\n",
       "  \"@context\": {\n",
+      "    \"dcterms\": \"http://purl.org/dc/terms/\",\n",
+      "    \"ex\": \"https://example.org#\",\n",
       "    \"foaf\": \"http://xmlns.com/foaf/0.1/\",\n",
       "    \"hdf\": \"http://purl.allotrope.org/ontologies/hdf5/1.8#\",\n",
       "    \"prov\": \"http://www.w3.org/ns/prov#\",\n",
@@ -64,26 +65,170 @@
       "  },\n",
       "  \"@graph\": [\n",
       "    {\n",
-      "      \"@id\": \"_:69ad64a678055ecde7601c70b432cdd3\",\n",
-      "      \"@type\": \"hdf:File\"\n",
+      "      \"@id\": \"ex:tmp2.hdf/nd-array__dataspace_dimension_0\",\n",
+      "      \"@type\": \"hdf:DataspaceDimension\",\n",
+      "      \"hdf:dimensionIndex\": 0,\n",
+      "      \"hdf:size\": 2\n",
       "    },\n",
       "    {\n",
-      "      \"@id\": \"hdf:scalarDataspace\",\n",
-      "      \"@type\": \"hdf:scalarDataspace\"\n",
+      "      \"@id\": \"ex:tmp2.hdf/test__dataspace\",\n",
+      "      \"@type\": \"hdf:ScalarDataspace\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"@id\": \"ex:tmp2.hdf/contact\",\n",
+      "      \"@type\": \"hdf:Group\",\n",
+      "      \"dcterms:relation\": {\n",
+      "        \"@id\": \"https://orcid.org/0000-0001-8729-0482\"\n",
+      "      },\n",
+      "      \"hdf:attribute\": [\n",
+      "        {\n",
+      "          \"@id\": \"ex:tmp2.hdf/contact@hint\"\n",
+      "        },\n",
+      "        {\n",
+      "          \"@id\": \"ex:tmp2.hdf/contact@lname\"\n",
+      "        },\n",
+      "        {\n",
+      "          \"@id\": \"ex:tmp2.hdf/contact@fname\"\n",
+      "        }\n",
+      "      ],\n",
+      "      \"hdf:name\": \"/contact\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"@id\": \"ex:tmp2.hdf/test\",\n",
+      "      \"@type\": \"hdf:Dataset\",\n",
+      "      \"hdf:dataspace\": {\n",
+      "        \"@id\": \"ex:tmp2.hdf/test__dataspace\"\n",
+      "      },\n",
+      "      \"hdf:datatype\": [\n",
+      "        {\n",
+      "          \"@id\": \"hdf:H5T_IEEE_F64LE\"\n",
+      "        },\n",
+      "        \"H5T_FLOAT\"\n",
+      "      ],\n",
+      "      \"hdf:layout\": {\n",
+      "        \"@id\": \"hdf:H5D_CONTIGUOUS\"\n",
+      "      },\n",
+      "      \"hdf:maximumSize\": -1,\n",
+      "      \"hdf:name\": \"/test\",\n",
+      "      \"hdf:rank\": 0,\n",
+      "      \"hdf:size\": 1,\n",
+      "      \"hdf:value\": 4.3\n",
+      "    },\n",
+      "    {\n",
+      "      \"@id\": \"ex:tmp2.hdf/nd-array__chunk_dimension_0\",\n",
+      "      \"@type\": \"hdf:DataspaceDimension\",\n",
+      "      \"hdf:dimensionIndex\": 0,\n",
+      "      \"hdf:size\": 1\n",
+      "    },\n",
+      "    {\n",
+      "      \"@id\": \"ex:tmp2.hdf/contact@fname\",\n",
+      "      \"@type\": \"hdf:StringAttribute\",\n",
+      "      \"hdf:data\": \"Matthias\",\n",
+      "      \"hdf:name\": \"fname\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"@id\": \"ex:tmp2.hdf/nd-array__chunk_dimension_1\",\n",
+      "      \"@type\": \"hdf:DataspaceDimension\",\n",
+      "      \"hdf:dimensionIndex\": 1,\n",
+      "      \"hdf:size\": 3\n",
+      "    },\n",
+      "    {\n",
+      "      \"@id\": \"ex:tmp2.hdf\",\n",
+      "      \"@type\": \"hdf:File\",\n",
+      "      \"hdf:rootGroup\": {\n",
+      "        \"@id\": \"ex:tmp2.hdf/\"\n",
+      "      }\n",
+      "    },\n",
+      "    {\n",
+      "      \"@id\": \"ex:tmp2.hdf/nd-array\",\n",
+      "      \"@type\": \"hdf:Dataset\",\n",
+      "      \"hdf:chunk\": {\n",
+      "        \"@id\": \"ex:tmp2.hdf/nd-array__chunk_dimensions\"\n",
+      "      },\n",
+      "      \"hdf:dataspace\": {\n",
+      "        \"@id\": \"ex:tmp2.hdf/nd-array__dataspace\"\n",
+      "      },\n",
+      "      \"hdf:datatype\": [\n",
+      "        \"H5T_FLOAT\",\n",
+      "        {\n",
+      "          \"@id\": \"hdf:H5T_IEEE_F64LE\"\n",
+      "        }\n",
+      "      ],\n",
+      "      \"hdf:layout\": {\n",
+      "        \"@id\": \"hdf:H5D_CHUNKED\"\n",
+      "      },\n",
+      "      \"hdf:maximumSize\": 6,\n",
+      "      \"hdf:name\": \"/nd-array\",\n",
+      "      \"hdf:rank\": 2,\n",
+      "      \"hdf:size\": 6\n",
+      "    },\n",
+      "    {\n",
+      "      \"@id\": \"ex:tmp2.hdf/\",\n",
+      "      \"@type\": \"hdf:Group\",\n",
+      "      \"hdf:member\": [\n",
+      "        {\n",
+      "          \"@id\": \"ex:tmp2.hdf/contact\"\n",
+      "        },\n",
+      "        {\n",
+      "          \"@id\": \"ex:tmp2.hdf/nd-array\"\n",
+      "        },\n",
+      "        {\n",
+      "          \"@id\": \"ex:tmp2.hdf/test\"\n",
+      "        }\n",
+      "      ],\n",
+      "      \"hdf:name\": \"/\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"@id\": \"https://orcid.org/0000-0001-8729-0482\",\n",
+      "      \"@type\": \"prov:Person\",\n",
+      "      \"foaf:firstName\": \"Matthias\",\n",
+      "      \"foaf:lastName\": \"Probst\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"@id\": \"ex:tmp2.hdf/nd-array__dataspace\",\n",
+      "      \"@type\": \"hdf:SimpleDataspace\",\n",
+      "      \"hdf:dimension\": [\n",
+      "        {\n",
+      "          \"@id\": \"ex:tmp2.hdf/nd-array__dataspace_dimension_0\"\n",
+      "        },\n",
+      "        {\n",
+      "          \"@id\": \"ex:tmp2.hdf/nd-array__dataspace_dimension_1\"\n",
+      "        }\n",
+      "      ]\n",
+      "    },\n",
+      "    {\n",
+      "      \"@id\": \"ex:tmp2.hdf/nd-array__dataspace_dimension_1\",\n",
+      "      \"@type\": \"hdf:DataspaceDimension\",\n",
+      "      \"hdf:dimensionIndex\": 1,\n",
+      "      \"hdf:size\": 3\n",
+      "    },\n",
+      "    {\n",
+      "      \"@id\": \"ex:tmp2.hdf/contact@lname\",\n",
+      "      \"@type\": \"hdf:StringAttribute\",\n",
+      "      \"hdf:data\": \"Probst\",\n",
+      "      \"hdf:name\": \"lname\"\n",
       "    },\n",
       "    {\n",
       "      \"@id\": \"hdf:H5T_IEEE_F64LE\",\n",
       "      \"@type\": \"hdf:Datatype\"\n",
       "    },\n",
       "    {\n",
-      "      \"@id\": \"_:03e43b66f42e2e7f00f2288985db2abf\",\n",
-      "      \"@type\": \"prov:Person\",\n",
-      "      \"foaf:firstName\": \"Matthias\",\n",
-      "      \"foaf:lastName\": \"Probst\"\n",
+      "      \"@id\": \"ex:tmp2.hdf/nd-array__chunk_dimensions\",\n",
+      "      \"@type\": \"hdf:ChunkDimension\",\n",
+      "      \"hdf:dimension\": [\n",
+      "        {\n",
+      "          \"@id\": \"ex:tmp2.hdf/nd-array__chunk_dimension_1\"\n",
+      "        },\n",
+      "        {\n",
+      "          \"@id\": \"ex:tmp2.hdf/nd-array__chunk_dimension_0\"\n",
+      "        }\n",
+      "      ]\n",
       "    },\n",
       "    {\n",
-      "      \"@id\": \"https://orcid.org/0000-0001-8729-0482\",\n",
-      "      \"@type\": \"prov:Person\"\n",
+      "      \"@id\": \"ex:tmp2.hdf/contact@hint\",\n",
+      "      \"@type\": \"hdf:StringAttribute\",\n",
+      "      \"hdf:data\": \"This group could be representing a person.\",\n",
+      "      \"hdf:name\": \"hint\"\n",
       "    }\n",
       "  ]\n",
       "}\n"
@@ -93,6 +238,7 @@
    "source": [
     "with h5tbx.File() as h5:\n",
     "    h5.create_dataset(name='test', data=4.3)\n",
+    "    h5.create_dataset(name='nd-array', data=np.random.rand(2, 3), chunks=(1,3))\n",
     "    grp = h5.create_group(name='contact')\n",
     "    grp.attrs['fname', rdflib.FOAF.firstName] = 'Matthias'\n",
     "    grp.attrs['lname', rdflib.FOAF.lastName] = 'Probst'\n",
@@ -101,14 +247,14 @@
     "    grp.rdf.type = rdflib.PROV.Person  # --> rdf.type = Person\n",
     "    grp.rdf.subject = 'https://orcid.org/0000-0001-8729-0482'  # -> @id='https://orcid.org/0000-0001-8729-0482'\n",
     "\n",
-    "    print(h5.dump_jsonld(indent=2, structural=True, resolve_keys=True))\n",
+    "    print(h5.dump_jsonld(indent=2, structural=True, file_uri=\"https://example.org#\", context=dict(ex=\"https://example.org#\")))\n",
     "    \n",
     "graph = h5tbx.get_ld(h5.hdf_filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "064a9e31-1fd0-429e-9189-663e950bc52f",
    "metadata": {},
    "outputs": [],
@@ -120,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "ce1a26f6-ad59-4014-b5b2-dcee38f11a26",
    "metadata": {},
    "outputs": [],
@@ -130,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "78c9adf7-43f0-4aa1-8740-149bf3a5f74f",
    "metadata": {},
    "outputs": [],
@@ -143,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "e8d13d2e-d66e-4028-8909-7192cfef1bf6",
    "metadata": {},
    "outputs": [
@@ -151,13 +297,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: When  cdn_resources is 'local' jupyter notebook has issues displaying graphics on chrome/safari. Use cdn_resources='in_line' or cdn_resources='remote' if you have issues viewing graphics in a notebook.\n"
+      "Warning: When  cdn_resources is 'local' jupyter notebook has issues displaying graphics on chrome/safari. Use cdn_resources='in_line' or cdn_resources='remote' if you have issues viewing graphics in a notebook.\n",
+      "graph.html\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"600px\"\n",
+       "            src=\"graph.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x16f4bb77760>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "pyvis_graph = subgraph.build_pyvis_graph(notebook=True, style=VIS_STYLE)\n",
-    "# pyvis_graph.show('graph.html', notebook=True)\n",
+    "pyvis_graph.show('graph.html', notebook=True)\n",
     "# the above call fails in the readthedocs build process... we show an image of the result here:"
    ]
   },
@@ -172,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "a44f0039-00b8-44c5-b237-ccba12993bdd",
    "metadata": {},
    "outputs": [
@@ -182,19 +351,21 @@
      "text": [
       "{\n",
       "  \"@context\": {\n",
+      "    \"dcterms\": \"http://purl.org/dc/terms/\",\n",
       "    \"foaf\": \"http://xmlns.com/foaf/0.1/\",\n",
-      "    \"hdf\": \"http://purl.allotrope.org/ontologies/hdf5/1.8#\",\n",
-      "    \"rdf\": \"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"\n",
+      "    \"prov\": \"http://www.w3.org/ns/prov#\"\n",
       "  },\n",
       "  \"@graph\": [\n",
       "    {\n",
-      "      \"@id\": \"_:af3b30750dbfd021eb8843274633ba46\",\n",
-      "      \"@type\": \"hdf:File\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"_:33501378e9a891ca7b7655ee472f25b4\",\n",
+      "      \"@id\": \"prov:Person\",\n",
       "      \"foaf:firstName\": \"Matthias\",\n",
       "      \"foaf:lastName\": \"Probst\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"@id\": \"_:tmp3.hdf/contact\",\n",
+      "      \"dcterms:relation\": {\n",
+      "        \"@id\": \"prov:Person\"\n",
+      "      }\n",
       "    }\n",
       "  ]\n",
       "}\n"
@@ -213,12 +384,12 @@
     "    grp.attrs['@id'] = 'https://orcid.org/0000-0001-8729-0482'\n",
     "    print(h5.dump_jsonld(indent=2, structural=False))\n",
     "\n",
-    "graph = h5tbx.get_ld(h5.hdf_filename, structural=False, use_simple_bnode_value=True)"
+    "graph = h5tbx.get_ld(h5.hdf_filename, structural=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "077911e8-8bc3-4b58-a480-df605bdceae4",
    "metadata": {},
    "outputs": [],
@@ -233,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "67f99459-8351-4819-8a67-2b58d4b1e398",
    "metadata": {},
    "outputs": [
@@ -241,8 +412,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: When  cdn_resources is 'local' jupyter notebook has issues displaying graphics on chrome/safari. Use cdn_resources='in_line' or cdn_resources='remote' if you have issues viewing graphics in a notebook.\n"
+      "Warning: When  cdn_resources is 'local' jupyter notebook has issues displaying graphics on chrome/safari. Use cdn_resources='in_line' or cdn_resources='remote' if you have issues viewing graphics in a notebook.\n",
+      "tmp.grpah.html\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"600px\"\n",
+       "            src=\"tmp.grpah.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x16f174da0b0>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -254,7 +448,7 @@
     "pyvis_graph = subgraph.build_pyvis_graph(notebook=True, style=VIS_STYLE)\n",
     "\n",
     "pyvis_graph.force_atlas_2based(overlap=0)\n",
-    "# pyvis_graph.show(\"tmp.grpah.html\", local=True, notebook=True)\n",
+    "pyvis_graph.show(\"tmp.grpah.html\", local=True, notebook=True)\n",
     "# the above call fails in the readthedocs build process... we show an image of the result here:"
    ]
   },
@@ -291,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
